# cpp-template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: compile_warnings.cmake  conan.cmake  libs.cmake  settings.cmake  sources.cmake
include/proj/: a.hpp
src/proj/: a.cpp
tests/: CMakeLists.txt
tests/src/: test_a.cpp
